ansible/roles/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /apple
          pathType: Prefix
          backend:
            service:
              name: nginx-lab
              port:
                number: 80
        - path: /banana
          pathType: Prefix
          backend:
            service:
              name: nginx-lab-x
              port:
                number: 80
